k8s/prober.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-prober
  namespace: status-platform
  labels:
    app: status-prober
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: status-prober
  template:
    metadata:
      labels:
        app: status-prober
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ecr-pull
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: prober
          image: 820932217554.dkr.ecr.eu-north-1.amazonaws.com/status-platform-dev-prober:sha-b00401c5c2b8d71bca2a7a157eddeceedc695e16-run-37392574072-1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 150m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
