k8s/api.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: status-platform
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-api
  namespace: status-platform
  labels:
    app: status-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: status-api
  template:
    metadata:
      labels:
        app: status-api
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ecr-pull
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: 820932217554.dkr.ecr.eu-north-1.amazonaws.com/status-platform-dev-api:sha-8918203f6dd55fe7f11ab6e71980e3fe40e3eb8a-run-37385282729-1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 2
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 20
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: temporary-files
              mountPath: /tmp
      volumes:
        - name: temporary-files
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: status-api
  namespace: status-platform
spec:
  type: ClusterIP
  selector:
    app: status-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
